<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KeyStoreTestCaseActivity">

    <TextView
        android:id="@+id/output_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/input_editText" />

    <EditText
        android:id="@+id/input_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:imeOptions="actionDone"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/encrypt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decrypt_button"
        app:layout_constraintTop_toBottomOf="@+id/input_editText"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decrypt_button"
        android:text="@string/dencrypt_text"
        app:layout_constraintStart_toEndOf="@+id/encrypt_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/encrypt_button"
        app:layout_constraintBottom_toBottomOf="@+id/encrypt_button" />

    <RadioGroup
        android:id="@+id/crypto_type_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/aes_radio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_editText"
        app:layout_constraintBottom_toTopOf="@+id/encrypt_button" >

        <RadioButton
            android:id="@+id/aes_radio_button"
            android:text="@string/aes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rsa_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rsa_text"/>

        <RadioButton
            android:id="@+id/hybrid_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hybrid_text" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>